argocd/infra-security/falco-talon/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falco-talon
  namespace: falco
spec:
  selector:
    app.kubernetes.io/name: falco-talon
  ports:
    - name: http
      port: 2803
      targetPort: http
      protocol: TCP
